force-app/main/default/objects/Default_Pricing__mdt/Default_Pricing__mdt.object-meta.xml
<CustomObject>
    <label>Default Pricing</label>
    <pluralLabel>Default Pricings</pluralLabel>
</CustomObject>