force-app/main/default/objects/Default_Pricing__mdt/fields/Advance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Advance_Fee__c</fullName>
    <label>Advance Fee %</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>