force-app/main/default/objects/Default_Pricing__mdt/fields/Advance_Fee_Cap__c.field-meta.xml
<CustomField>
    <fullName>Advance_Fee_Cap__c</fullName>
    <label>Advance Fee Cap</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>