force-app/main/default/objects/Default_Pricing__mdt/fields/Advance_Period__c.field-meta.xml
<CustomField>
    <fullName>Advance_Period__c</fullName>
    <label>Advance Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
                <default>true</default>
                <label>12 Months</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>