force-app/main/default/objects/Default_Pricing__mdt/fields/ARV_LTV__c.field-meta.xml
<CustomField>
    <fullName>ARV_LTV__c</fullName>
    <description>After Repair Value Loan To Value</description>
    <inlineHelpText>After Repair Value Loan To Value</inlineHelpText>
    <label>ARV LTV</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>