force-app/main/default/objects/Default_Pricing__mdt/fields/Broker_YSP_Percent__c.field-meta.xml
<CustomField>
    <fullName>Broker_YSP_Percent__c</fullName>
    <description>Yield Spread Premium</description>
    <inlineHelpText>Yield Spread Premium</inlineHelpText>
    <label>Broker YSP %</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>