force-app/main/default/objects/Default_Pricing__mdt/fields/Cash_Management__c.field-meta.xml
<CustomField>
    <fullName>Cash_Management__c</fullName>
    <label>Cash Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soft</fullName>
                <default>true</default>
                <label>Soft</label>
            </value>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>