force-app/main/default/objects/Default_Pricing__mdt/fields/Exit_Fee__c.field-meta.xml
<CustomField>
    <fullName>Exit_Fee__c</fullName>
    <label>Exit Fee %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>