force-app/main/default/objects/Default_Pricing__mdt/fields/Floor_Percent__c.field-meta.xml
<CustomField>
    <fullName>Floor_Percent__c</fullName>
    <label>Floor %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>