force-app/main/default/objects/Default_Pricing__mdt/fields/Holdback_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Holdback_Multiplier__c</fullName>
    <label>Holdback Multiplier</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>