force-app/main/default/objects/Default_Pricing__mdt/fields/Initial_LTC__c.field-meta.xml
<CustomField>
    <fullName>Initial_LTC__c</fullName>
    <description>Matches to the Requested Initial LTC on the deal</description>
    <inlineHelpText>Requested Initial LTC on the deal</inlineHelpText>
    <label>Initial LTC</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>