force-app/main/default/objects/Default_Pricing__mdt/fields/Initial_LTV__c.field-meta.xml
<CustomField>
    <fullName>Initial_LTV__c</fullName>
    <label>Initial LTV</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>