force-app/main/default/objects/Default_Pricing__mdt/fields/Interest_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Type__c</fullName>
    <label>Interest Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Floating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>