force-app/main/default/objects/Default_Pricing__mdt/fields/IO_Term__c.field-meta.xml
<CustomField>
    <fullName>IO_Term__c</fullName>
    <description>Interest Only Term</description>
    <inlineHelpText>Interest Only Term</inlineHelpText>
    <label>IO Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 months</fullName>
                <default>true</default>
                <label>0 months</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>