force-app/main/default/objects/Default_Pricing__mdt/fields/Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term__c</fullName>
    <description>Term Period of the Loan</description>
    <inlineHelpText>Term Period of the Loan</inlineHelpText>
    <label>Loan Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Year</fullName>
                <default>true</default>
                <label>3 Year</label>
            </value>
            <value>
                <fullName>5 Year</fullName>
            </value>
            <value>
                <fullName>7 Year</fullName>
            </value>
            <value>
                <fullName>10 Year</fullName>
            </value>
            <value>
                <fullName>30 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>