force-app/main/default/objects/Default_Pricing__mdt/fields/Max_LTC_Percent__c.field-meta.xml
<CustomField>
    <fullName>Max_LTC_Percent__c</fullName>
    <description>Max Loan to Cost</description>
    <inlineHelpText>Max Loan to Cost</inlineHelpText>
    <label>Max LTC %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>