force-app/main/default/objects/Default_Pricing__mdt/fields/Max_LTV__c.field-meta.xml
<CustomField>
    <fullName>Max_LTV__c</fullName>
    <description>Maximum Loan to Value</description>
    <inlineHelpText>Maximum Loan to Value</inlineHelpText>
    <label>Max LTV %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>