force-app/main/default/objects/Default_Pricing__mdt/fields/Max_LTV_Percent_for_Foreign_National__c.field-meta.xml
<CustomField>
    <fullName>Max_LTV_Percent_for_Foreign_National__c</fullName>
    <description>Maximum Loan to Value for a Loan involving a Foreign National</description>
    <inlineHelpText>Maximum Loan to Value for a Loan involving a Foreign National</inlineHelpText>
    <label>Max LTV % for Foreign National</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>