force-app/main/default/objects/Default_Pricing__mdt/fields/Max_Reno_Cost_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Max_Reno_Cost_Reimbursement__c</fullName>
    <description>Max % of the Renovation Budget</description>
    <inlineHelpText>Max % of the Renovation Budget</inlineHelpText>
    <label>Max Reno Cost Reimbursement</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>