force-app/main/default/objects/Default_Pricing__mdt/fields/Origination_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee_Percent__c</fullName>
    <label>Origination Fee %</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>