force-app/main/default/objects/Default_Pricing__mdt/fields/Product_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Type__c</fullName>
    <label>Product Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renovation</fullName>
                <default>true</default>
                <label>Renovation</label>
            </value>
            <value>
                <fullName>No Renovation</fullName>
            </value>
            <value>
                <fullName>Long Term Rental</fullName>
            </value>
            <value>
                <fullName>Short Term Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>