force-app/main/default/objects/Default_Pricing__mdt/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Line</fullName>
                <default>true</default>
                <label>Credit Line</label>
            </value>
            <value>
                <fullName>Term Loan</fullName>
            </value>
            <value>
                <fullName>Single Asset (1-4 Unit)</fullName>
            </value>
            <value>
                <fullName>Single Asset (5-10 Unit)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>