force-app/main/default/objects/Default_Pricing__mdt/fields/Project_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Project_Strategy__c</fullName>
    <label>Project Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fix and Flip</fullName>
                <default>true</default>
                <label>Fix and Flip</label>
            </value>
            <value>
                <fullName>Renovate and Rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>