force-app/main/default/objects/Default_Pricing__mdt/fields/Property_Substitution__c.field-meta.xml
<CustomField>
    <fullName>Property_Substitution__c</fullName>
    <label>Property Substitution</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>