force-app/main/default/objects/Default_Pricing__mdt/fields/Recourse__c.field-meta.xml
<CustomField>
    <fullName>Recourse__c</fullName>
    <label>Recourse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recourse</fullName>
                <default>true</default>
                <label>Recourse</label>
            </value>
            <value>
                <fullName>Non-Recourse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>