force-app/main/default/objects/Default_Pricing__mdt/fields/Reno_Limit_Acq_Cost__c.field-meta.xml
<CustomField>
    <fullName>Reno_Limit_Acq_Cost__c</fullName>
    <label>Reno Limit (% Acq Cost)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>