force-app/main/default/objects/Default_Pricing__mdt/fields/Repayment_Period__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Period__c</fullName>
    <description>Asset Maturity Period</description>
    <inlineHelpText>Asset Maturity Period</inlineHelpText>
    <label>Repayment Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9 Months</fullName>
                <default>true</default>
                <label>9 Months</label>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>