force-app/main/default/objects/Default_Pricing__mdt/fields/Stepdown_Prepayment_Period__c.field-meta.xml
<CustomField>
    <fullName>Stepdown_Prepayment_Period__c</fullName>
    <label>Stepdown Prepayment Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5,4,3,2,1</fullName>
                <default>true</default>
                <label>5,4,3,2,1</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>