force-app/main/default/objects/Default_Pricing__mdt/fields/Total_Loan_LTC__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_LTC__c</fullName>
    <label>Total Loan LTC</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>