force-app/main/default/objects/Default_Pricing__mdt/fields/YM_Par_Prepayment_Repeat_Client__c.field-meta.xml
<CustomField>
    <fullName>YM_Par_Prepayment_Repeat_Client__c</fullName>
    <description>YM Par Prepayment Period for a repeat borrower</description>
    <inlineHelpText>YM Par Prepayment Period for a repeat borrower</inlineHelpText>
    <label>YM Par Prepayment Repeat Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>54 Months</fullName>
            </value>
            <value>
                <fullName>57 Months</fullName>
            </value>
            <value>
                <fullName>60 Months</fullName>
                <default>true</default>
                <label>60 Months</label>
            </value>
            <value>
                <fullName>78 Months</fullName>
            </value>
            <value>
                <fullName>81 Months</fullName>
            </value>
            <value>
                <fullName>114 Months</fullName>
            </value>
            <value>
                <fullName>117 Months</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>