force-app/main/default/objects/Default_Pricing__mdt/listViews/All_Custom.listView-meta.xml
<ListView>
    <fullName>All_Custom</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Loan_Term__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Sub_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>