force-app/main/default/objects/Default_Pricing__mdt/listViews/Default_Credit_Line_Pricing.listView-meta.xml
<ListView>
    <fullName>Default_Credit_Line_Pricing</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>Credit Line</value>
    </filters>
    <label>Default Credit Line Pricing</label>
</ListView>