force-app/main/default/objects/Default_Pricing__mdt/listViews/Default_Term_Pricing.listView-meta.xml
<ListView>
    <fullName>Default_Term_Pricing</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Floor_Percent__c</columns>
    <columns>Loan_Term__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>Term Loan</value>
    </filters>
    <label>Default Term Pricing</label>
</ListView>