force-app/main/default/objects/Default_Pricing__mdt/listViews/Term_Default_Pricing.listView-meta.xml
<ListView>
    <fullName>Term_Default_Pricing</fullName>
    <columns>MasterLabel</columns>
    <columns>Loan_Term__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Sub_Type__c</columns>
    <columns>Holdback_Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>Term Loan</value>
    </filters>
    <label>Term Default Pricing</label>
</ListView>